# ABP_Tutor

./: .env.example  .gitignore  README.md  batch_process_materials.py  content_classifier.py  get_chat_id.py  output.txt  pyproject.toml  smart_map_materials.py  upload_material.py
.github/workflows/: daily.yml
data/: cronograma.json
migrations/: 001_create_tutor_tables.sql  002_create_materials_table.sql  003_fix_materials_multi.sql
src/abp_tutor/: __init__.py  config.py  db_app.py  db_state.py  logging_setup.py  orchestrator.py  scheduler.py  telegram_client.py  tutor.py
src/abp_tutor/prompts/: daily_user_template.md  tutor_system.md
tests/: test_scheduler.py  test_telegram_client.py
