[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abp-tutor"
version = "1.0.0"
description = "Tutor IA diário para a Prova de Título ABP — orquestrador via Telegram"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "João Lima"},
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "supabase>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
